# HyCell-JEPA

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml  pytest.ini  requirements.txt
00_Control/: HyCell-JEPA 控制台.md
02_Codex_Goals/: Goal 1 - Scaffold Toy Data.md  Goal 2 - Encoder JEPA.md  Goal 3 - Adapter Verifier Planner Demo.md  Goal 4 - Real Data Integration.md  Goal 5 - Cloud 4090 Training.md
03_Progress/: 2026-07-05.md
05_Experiments/: Experiment Template.md
06_Bugs/: Bug Template.md
configs/: benchmark_toy.yaml  demo.yaml  gene_sets.yaml  gse130973_smoke.yaml  jepa_toy.yaml  real_data_schema.yaml  toy_data.yaml  train_cloud_4090.yaml  train_gse130973_smoke.yaml  train_local.yaml
docs/: ACCEPTANCE.md  PROJECT_BRIEF.md  benchmark_report.md  cloud_4090_guide.md  data_card.md  datasets_registry.md  design_summary.md  gse130973_integration.md  gse130973_smoke_report.md  limitations.md  model_card.md  progress_log.md  real_data_integration.md  real_data_smoke_test.md  release_v0.1.md  roadmap.md
scripts/: benchmark_toy.py  build_evidence_graph.py  demo_app.py  eval_benchmark.py  eval_real_smoke.py  evaluate_jepa.py  inspect_dataset.py  inspect_gse130973.py  make_toy_data.py  package_results.py  prepare_gse130973.py  preprocess_data.py  run_cloud_experiment.sh  run_planner.py  score_gene_sets.py  train_encoder.py  train_jepa.py  train_real_smoke.py  validate_dataset.py  verify_goal1.sh  verify_goal2.sh  verify_goal3.sh  verify_goal4.sh  verify_goal4_real_smoke.sh  verify_goal5.sh  verify_goal6.sh  verify_goal7.sh  verify_release.sh
(+43 files in other folders)
