[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "hycell-jepa"
version = "0.1.0"
description = "Toy engineering scaffold for the HyCell-JEPA cellular world model MVP."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.23",
    "pyyaml>=6.0",
]
authors = [
    { name = "HyCell-JEPA contributors" },
]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[tool.setuptools.packages.find]
where = ["src"]
